# monitor-versoes

./: .gitignore  ferramenta_versoes_design.md  go.mod  motor_go_spec.md  pyproject.toml  save-conflict-state.sh
cmd/motor/: main.go
internal/domain/: commits.go  commits_test.go  reconcile.go  reconcile_test.go  types.go  version.go  version_test.go
internal/engine/: criar.go  criar_test.go  deps.go  incrementar.go  incrementar_test.go  reconstruir_lock.go  reconstruir_lock_test.go  verificar.go  verificar_test.go
internal/ports/: ports.go
internal/services/: base_resolver.go  base_resolver_test.go  lock_store.go  lock_store_test.go  presence_oracle.go  presence_oracle_test.go  publication_gate.go  publication_gate_test.go  target_resolver.go  target_resolver_test.go
motor/: __main__.py  errors.py  ports.py  tui.py
motor/domain/: commits.py  reconcile.py  types.py  version.py
motor/engine/: atualizar.py  criar.py  deps.py  incrementar.py  reconstruir_lock.py  verificar.py
motor/services/: base_resolver.py  lock_store.py  presence_oracle.py  publication_gate.py  target_resolver.py
tests/: test_base_resolver.py  test_commits.py  test_commitsource_bitbucket.py  test_commitsource_chain.py  test_commitsource_grep.py  test_criar.py  test_git_fake.py  test_git_subprocess.py  test_incrementar.py  test_lock_store.py  test_main.py  test_presence_oracle.py  test_publication_gate.py  test_reconcile.py  test_reconstruir_lock.py  test_target_resolver.py  test_tasksource_fake.py  test_tasksource_manuallist.py  test_tasksource_rest.py  test_verificar.py  test_version.py
(+23 files in other folders)
