[project]
name = "motor-versoes"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx",
    "python-dotenv",
    "textual>=8.2.8",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["motor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
